Fix portfolio cards visibility by correcting overlay opacity settings

--- a/public/css/layout.css
+++ b/public/css/layout.css
@@ -597,8 +597,8 @@ ul#nav li.current a {
   height: 100%;
 
   opacity: 1;
-  -moz-opacity: 0;
-  filter: alpha(opacity=0);
+  -moz-opacity: 1;
+  filter: alpha(opacity=100);
 
   -webkit-transition: opacity 0.3s ease-in-out;
   -moz-transition: opacity 0.3s ease-in-out;
